<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DF8611"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtVClientName"
                style="@style/titles"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/nombreCliente"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/eTxtClientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:focusedByDefault="true"
                android:hint="Fernando Lopez Garcia"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtVClientName" />

            <TextView
                android:id="@+id/txtVPizza"
                style="@style/titles"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/pizza"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eTxtClientName" />

            <LinearLayout
                android:id="@+id/lLyPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtVPizza">

                <LinearLayout
                    android:id="@+id/lLyPizzaBBQ"
                    style="@style/buttons"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:src="@drawable/bbq_chicken" />

                    <TextView
                        style="@style/btnText"
                        android:text="@string/bbq" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lLyPizzaMargarita"
                    style="@style/buttons"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:src="@drawable/margaritta3" />

                    <TextView

                        style="@style/btnText"
                        android:text="@string/margaritta" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lLyPizzaRomana"
                    style="@style/buttons"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:src="@drawable/romana" />

                    <TextView

                        style="@style/btnText"
                        android:text="@string/romana" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lLyQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lLyPizza">

                <Button
                    android:id="@+id/btnLessQuantity"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="-"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txteQuantity"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:text="1"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnMoreQuantity"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="+"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtVDrinks"
                style="@style/titles"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/drinks"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lLyQuantity" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtVDrinks">

                <LinearLayout
                    android:id="@+id/lLyWater"
                    style="@style/buttons"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:src="@drawable/watterbottle" />

                    <TextView
                        style="@style/btnText"
                        android:text="@string/water" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lLyCola"
                    style="@style/buttons"
                    android:clickable="true">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:src="@drawable/colabottle" />

                    <TextView
                        style="@style/btnText"
                        android:text="@string/cola" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_addToShoppingKart"
                style="@style/buttons"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Añadir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#27922E"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/total"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="0,0"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="€"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@+id/txtVTotalPrice"
            app:layout_constraintTop_toTopOf="@+id/txtVTotalPrice" />

        <Button
            android:id="@+id/btnConfirmSelection"
            android:layout_width="90dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/iconpay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>