<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResupenPedido"
    android:background="#DF8611"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        style="@style/titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/orderSumary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txtVItemPizza"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#86FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txtVClientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nombre" />

        <View
            android:id="@+id/vSeparator"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="#000"
            app:layout_constraintTop_toBottomOf="@+id/txtVClientName"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/txtVCantInfo"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/quantity"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vSeparator" />

        <TextView
            android:id="@+id/txtVItemInfo"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/items"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtVCantInfo"
            app:layout_constraintTop_toTopOf="@+id/txtVCantInfo" />

        <TextView
            android:id="@+id/txtVPriceU"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:text="@string/uPrice"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtVItemInfo"
            app:layout_constraintTop_toTopOf="@+id/txtVItemInfo" />

        <TextView
            android:id="@+id/txtVtPriceT"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/priceT"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtVPriceU"
            app:layout_constraintTop_toTopOf="@+id/txtVPriceU" />

        <TextView
            android:id="@+id/txtVCantPizza"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/txtVCantInfo"
            app:layout_constraintStart_toStartOf="@+id/txtVCantInfo"
            app:layout_constraintTop_toBottomOf="@+id/txtVCantInfo"
            tools:text="10" />

        <TextView
            android:id="@+id/txtVPizzaName"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/txtVItemInfo"
            app:layout_constraintTop_toTopOf="@+id/txtVCantPizza"
            tools:text="Pizza Bolognesa" />

        <TextView
            android:id="@+id/txtVPizzaPriceU"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/txtVPriceU"
            app:layout_constraintStart_toStartOf="@+id/txtVPriceU"
            app:layout_constraintTop_toTopOf="@+id/txtVCantPizza"
            tools:text="1,2" />

        <TextView
            android:id="@+id/txtVPizzaPriceT"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/txtVtPriceT"
            app:layout_constraintStart_toStartOf="@+id/txtVtPriceT"
            app:layout_constraintTop_toTopOf="@+id/txtVCantPizza"
            tools:text="6" />

        <TextView
            android:id="@+id/txtVCantDrink"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="1"
            app:layout_constraintEnd_toEndOf="@+id/txtVCantInfo"
            app:layout_constraintStart_toStartOf="@+id/txtVCantInfo"
            app:layout_constraintTop_toBottomOf="@+id/txtVCantPizza" />

        <TextView
            android:id="@+id/txtVDrinkName"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/txtVItemInfo"
            app:layout_constraintTop_toTopOf="@+id/txtVCantDrink"
            tools:text="Agua" />

        <TextView
            android:id="@+id/txtVDrinkPriceU"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/txtVPriceU"
            app:layout_constraintStart_toStartOf="@+id/txtVPriceU"
            app:layout_constraintTop_toTopOf="@+id/txtVCantDrink"
            tools:text="1,0" />

        <TextView
            android:id="@+id/txtVDrinkPriceT"
            style="@style/txtVitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/txtVtPriceT"
            app:layout_constraintStart_toStartOf="@+id/txtVtPriceT"
            app:layout_constraintTop_toTopOf="@+id/txtVCantDrink"
            tools:text="1,0" />

        <TextView
            android:id="@+id/txtVItemsTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/total"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txtVtotalPriceNumber"
            app:layout_constraintTop_toBottomOf="@+id/txtVDrinkPriceU" />

        <TextView
            android:id="@+id/txtVtotalPriceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textSize="32dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtVItemsTotal"
            tools:text="20€" />


    </androidx.constraintlayout.widget.ConstraintLayout>
-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="363dp"
        android:layout_height="550dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" >
            <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:id="@+id/recyclerView"
            />
    </LinearLayout>


    <!--Bottom bar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="#27922E"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/cancel"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/pay"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>